# Lua2Wasm

./: .gitignore  Cargo.toml  LICENSE  output_wasm.sh  test.lua
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: closures.rs  lib.rs  table.rs
crates/scratch/: Cargo.toml
crates/scratch/src/: lib.rs  table.rs
crates/tester/: Cargo.toml
crates/tester/src/: errors.rs  main.rs
crates/value/src/: lib.rs
src/: bytecode.rs  debug.rs  globals.rs  instructions_ext.rs  lib.rs  linking.rs  main.rs  reloc_sections.rs  test.asm  test.lua  types.rs  vm.rs
src/debug/: mod.rs
src/instructions/: functions.rs  instructions_ext.rs  mod.rs
src/linking/: relocations.rs  segment_info.rs
src/object/: exports.rs  lua_modules.rs  mod.rs
src/object/instructions/: functions.rs  instructions_ext.rs  mod.rs  operations.rs
src/object/linking/: mod.rs
src/object/lua_modules/: exports.rs  instructions.rs
src/object/runtime_impls/: external_bindings.rs  initialize.rs  mod.rs
src/parsing/: asm.rs  debug.rs  expressions.rs  functions.rs  loops.rs  mod.rs  scopes.rs  state.rs  tests.rs
src/parsing/expressions/: postfix_ops.rs  pratt.rs  prefix.rs
src/runtime_impls/: external_bindings.rs  mod.rs
src/types/: func.rs  num.rs  string.rs  table.rs
src/vm/: bytecode.rs  datatypes.rs  globals.rs  mod.rs  types.rs
src/vm/types/: func.rs  hasher.rs  num.rs  string.rs  table.rs
