[workspace]
members = [ "crates/*" ]

[package]
name = "luant"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
luant_lexer = { path = "crates/lexer" }
luant_parser = { path = "crates/parser" }
real_float = "0.3.0"
slotmap = "1.1.1"
strum = { version = "0.27.2", features = ["derive"] }
hashbrown = "0.16.1"
bstr = "1.12.1"

[dependencies]
luant_lexer = { workspace = true }
luant_parser = { workspace = true }
real_float.workspace = true
slotmap.workspace = true
strum.workspace = true
hashbrown.workspace = true
bstr.workspace = true

anyhow = "1.0.101"
walrus = "0.24.5"

[patch.crates-io]
chumsky = { path = "chumsky" }
