[workspace]
members = [ "crates/*" ]

[package]
name = "camento"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
camento_lexer.path = "crates/lexer"
value.path = "crates/value"

real_float = "0.3.0"
slotmap = "1.1.1"
strum = { version = "0.27.2", features = ["derive"] }
hashbrown = "0.16.1"
bstr = "1.12.1"

[dependencies]
camento_lexer.workspace = true
value.workspace = true
real_float.workspace = true
slotmap.workspace = true
strum.workspace = true
hashbrown.workspace = true
bstr.workspace = true

auto_impl = "1.3.0"
anyhow = "1.0.101"
wasm-encoder = { version = "0.245.1", default-features = false, features = ["std"] }
leb128fmt = "0.1.0"

[profile.release]
lto = true

[profile.testing]
inherits = "release"
debug-assertions = true
