[package]
name = "luant_lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
real_float = { workspace = true }
hashbrown = { workspace = true }
slotmap = { workspace = true }
strum = { workspace = true }
bstr = { workspace = true }
logos = "0.16.0"
lexical-parse-float = { version = "1.0.6", features = [ "format",  ]}
