[package]
name = "luant_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
luant_lexer = { workspace = true }
real_float = { workspace = true }
hashbrown = { workspace = true }
slotmap = { workspace = true }
bstr = { workspace = true }
lexical-parse-float = { version = "1.0.6", features = [ "format" ] }
chumsky = { version = "0.13.0", features = ["pratt"] }
