[package]
name = "wasm_scratch"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "staticlib" ]

[dependencies]
hashbrown.workspace = true
value = { workspace = true }
zmij = "1.0.14"
libm = "0.2.0"

# dlmalloc = { version = "0.2.12", features = ["global"] }
# lol_alloc = "0.4.1"
talc = "4.4.3"
macro_rules_attribute = "0.2.2"
pastey = "0.2.1"
